# agocontrol

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  Makefile.obsolete  README  agocontrol.spec  version.h  version.h.in
conf/: CMakeLists.txt  Makefile  agoadmin.init  agoadmin.service  agoalert.init  agoapc.service  agodatalogger.service  agoevent.service  agofirmata.service  agoi2c.service  agoiscp.service  agoknx.service  agokwikwai.service  agomeloware.init  agomeloware.init.in  agomeloware.service  agoowfs.init  agoowfs.init.in  agoowfs.service  agoresolver.init  agoresolver.init.in  agoresolver.service  agorpc.service  agoscenario.service  agoscheduler.init  agosimulator.service  agosqueezeboxserver.service  agotimer.service  agozwave.init  agozwave.init.in  agozwave.service  config.ini.tpl  ipx800.init  raspiGPIO.service  schema-test.py  schema.yaml  security-limits.conf  squeezebox.init  sysctl.conf  webcam.conf
conf/conf.d/: CMakeLists.txt  Makefile  knx.conf  kwikwai.conf  onvif.conf  owfs.conf  rpc.conf  rpc.conf.in  squeezebox.conf  system.conf  x10.conf  zwave.conf
conf/schema.d/: scheduler.yaml
conf/systemd/: CMakeLists.txt  Makefile  agoadmin.service  agoalert.service  agoapc.service.in  agoasterisk.service  agoasterisk.service.in  agoblinkm.service  agoblinkm.service.in  agodatalogger.service  agodatalogger.service.in  agodmx.service  agodmx.service.in  agoenigma2.service  agoenigma2.service.in  agoenocean3.service  agoevent.service  agoevent.service.in  agofirmata.service.in  agogc100.service  agogc100.service.in  agoi2c.service.in  agoipx800.service  agoirtransethernet.service  agoirtransethernet.service.in  agoiscp.service  agoiscp.service.in  agojointspace.service  agojointspace.service.in  agoknx.service  agoknx.service.in  agokwikwai.service.in  agomeloware.service  agomeloware.service.in  agoowfs.service  agoowfs.service.in  agoradiothermostat.service  agoradiothermostat.service.in  agorain8net.service  agorain8net.service.in  (+25 more)
conf/sysvinit/: CMakeLists.txt  Makefile  agocontrol  agocontrol.in
conf/upstart/: agodatalogger.conf  agoevent.conf  agoknx.conf  agoresolver.conf  agorpc.conf  agoscenario.conf  agotimer.conf  agozwave.conf  eibd.conf
core/: CMakeLists.txt  Makefile  agocontrol-init-script.sh  agocontrol-init-script.sh.in  agoctrl.sh  agodatalogger.db  agodatalogger.py  agodrain.py  agoevent.py  agoresolver.py  agoscenario.py  agosecurity.py  boolParser.py  inventory.py  messagesend.py  myavahi.py
core/agotimer/: Makefile  agotimer.cpp
core/alert/: agoalert
core/datalogger/: CMakeLists.txt  Makefile  agodatalogger.cpp
core/drain/: CMakeLists.txt  Makefile  agodrain.cpp
core/event/: CMakeLists.txt  Makefile  agoevent.cpp  bool.cpp  bool.h
core/lua/: CMakeLists.txt  Makefile  agolua.cpp  command.lua  command.lua.in  helper.lua
core/manager/: Makefile  agoman.cpp
core/messagesend/: CMakeLists.txt  Makefile  messagesend.cpp
core/resolver/: CMakeLists.txt  Makefile  agoresolver.cpp  inventory.cpp  inventory.h  schema.cpp  schema.h
core/rpc/: CMakeLists.txt  Makefile  activate.cgi.in  agorpc.cpp  get_table_lang.cpp  mergetranslation.sh  mongoose.c  rpc-htpasswd.cpp  rpc-test.py
core/scenario/: CMakeLists.txt  Makefile  agoscenario.cpp
core/security/: CMakeLists.txt  Makefile  agosecurity.cpp
core/timer/: CMakeLists.txt  Makefile  agotimer.cpp  sunrise.cpp
devices/: CMakeLists.txt  Makefile  agologger.py  agoowfs.py  agosimulator.py  agowebcam.py  example.py
devices/1wire/: CMakeLists.txt  Makefile  agoowfs.py
devices/MushroomControl/: MushroomControl.py  agoclient.py
devices/PLCBUS/: CMakeLists.txt  PLCBUS.cpp  PLCBUS.h
devices/agoEnOcean/: Makefile  agoEnOcean.cpp
devices/agoalert/: agoalert  pushbullet.py
devices/agoapc/: CMakeLists.txt  Makefile  agoapc.py  fence_apc.py
devices/agodmx/: CMakeLists.txt  Makefile  agodmx.cpp  channels.xml
devices/agoeibd/: Makefile  agoeibd.cpp
devices/agojointspace/: CMakeLists.txt  Makefile  agojointspace.py
devices/agoknx/: Makefile  Telegram.cpp  Telegram.h  agoeibd.cpp  agoknx.cpp
devices/agozwave/: CDataFile.cpp  CDataFile.h  Main.cpp  Makefile  Makefile-base
devices/alert/: CMakeLists.txt  Makefile  agoalert.py
devices/asterisk/: CMakeLists.txt  Makefile  agoasterisk.py
devices/blinkm/: CMakeLists.txt  Makefile  agoblinkm.cpp
devices/blockly/: agocontrol.html  agocontrol_demo.js  deviceMap.yaml  patch_blockly.patch  patch_lua.patch  variables.yaml
devices/chromoflex/: CMakeLists.txt  Makefile  chromoflex.cpp
devices/enigma2/: CMakeLists.txt  Makefile  agoenigma2.py
devices/enocean2/: Makefile
devices/enocean3/: CMakeLists.txt  Makefile  agoenocean3.cpp  esp3.cpp  esp3.h  test.cpp
devices/example/: CMakeLists.txt  Makefile  example.cpp
devices/firmata/: CMakeLists.txt  Makefile  agofirmata.cpp  arduino.cpp  arduino.h  firmata.cpp  firmata.h
devices/gc100/: CMakeLists.txt  Makefile  agogc100.py
devices/i2c/: BMP085.c  CMakeLists.txt  Makefile  agoi2c.cpp
devices/inim/: inim.py
devices/ipx800/: CMakeLists.txt  Makefile  agoipx800  agoipx800v3  ipx800shutter.html  ipx800switch.html  pyipx800v3.py
devices/irtrans_ethernet/: CMakeLists.txt  Makefile  agoirtrans_ethernet.cpp
devices/knx/: CMakeLists.txt  Makefile  Telegram.h  agoknx.cpp
devices/kwikwai/: CMakeLists.txt  Makefile  agokwikwai.cpp  kwikwai.cpp  kwikwai.h
devices/mediaproxy/: CMakeLists.txt  Makefile  agomediaproxy  agomediaproxy.cpp
devices/onkyo/: CMakeLists.txt  Makefile  agoiscp.py  core.py
devices/onvif/: CMakeLists.txt  Makefile  MediaBinding.nsmap  WSDiscovery.py  agoonvif.py  onvif.cpp  onvif.h  onvif.nsmap  soapActionEngineBindingProxy.cpp  soapActionEngineBindingProxy.h  soapH.patch  (+38 more)
devices/onvif-old/: WSDiscovery.py
scripts/: CMakeLists.txt  Makefile  ago_import_lmce_knx.sh  agososreport.sh  agososreport.sh.in  convert-config.py  convert-event.py  convert-scenario.py  convert-zwave-uuid.py  reload-acl.py
shared/: CDataFile.cpp  CMakeLists.txt  Makefile  agoclient.cpp  agoclient.h  agoclient.h.in  agoclient.py  agoclient.py.in  setup.py  tests.cpp
(+434 files in other folders)
